implementazione nuovi servizi
