# stacoresrv-api/src/main/java/it/csi/stacore/stacoresrv/api/service/impl/RimborsiApiImpl.java
@@ -7,6 +7,7 @@ import javax.ws.rs.core.SecurityContext;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import it.csi.stacore.stacoresrv.api.dto.DatiCalcoloRimborsoNonGodutoVO;
 import it.csi.stacore.stacoresrv.api.dto.DatiCalcoloRimborsoVO;
 import it.csi.stacore.stacoresrv.api.service.RimborsiApi;
 import it.csi.stacore.stacoresrv.business.helper.RimborsiHelper;
@@ -23,5 +24,10 @@ public class RimborsiApiImpl implements RimborsiApi {
 	@Override
 	public Response calcolaRimborso(DatiCalcoloRimborsoVO datiCalcoloRimborsoVO, SecurityContext securityContext, HttpHeaders httpHeaders) {
 		return Response.ok().entity(rimborsiHelper.calcolaRimborso(datiCalcoloRimborsoVO)).build();
+	}
+
+	@Override
+	public Response calcolaRimborsoNonGoduto(DatiCalcoloRimborsoNonGodutoVO datiCalcolo, SecurityContext securityContext, HttpHeaders httpHeaders) {
+		return Response.ok().entity(rimborsiHelper.calcolaRimborso(datiCalcolo)).build();
 	}
 }
